# mtp-rs

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  clippy.toml  deny.toml  justfile  rustfmt.toml
.github/workflows/: audit.yml  ci.yml
benchmarks/mtp-rs-vs-libmtp/: Cargo.toml  README.md
benchmarks/mtp-rs-vs-libmtp/src/: lib.rs  libmtp_backend.rs  main.rs  mtp_rs_backend.rs  report.rs  runner.rs  types.rs
docs/: 1-libmtp-comprehensive-analysis.md  2-feasibility-assessment.md  3-test-strategy.md  4-capture-process.md  5-libmtp-device-quirks-analysis-summary.md  architecture.md  debugging.md  protocol.md  ptp-camera-features.md  ptp-extension-plan.md  ptp-extension-tasks.md  releasing.md  style-guide.md
docs/spec/: api-specification.md  architecture.md  implementation-phases.md  protocol-reference.md  test-cases.md
docs/spec/mtp-v1_1/: index.md
examples/: debug_listing.rs  debug_pixel_slow.rs  diagnose.rs  fuji_capture.rs  fuji_rw_check.rs  list_all_usb.rs  list_and_download.rs  ptp_diagnose.rs  test_capture.rs  test_file_ops.rs  test_partial_download_64.rs
proptest-regressions/ptp/: container.txt  pack.txt
src/: error.rs  lib.rs
src/mtp/: device.rs  event.rs  mod.rs  object.rs  storage.rs  stream.rs
src/ptp/: codes.rs  container.rs  device.rs  mod.rs  pack.rs  session.rs  types.rs
src/ptp/pack/: datetime.rs  mod.rs
src/ptp/session/: mod.rs  operations.rs  properties.rs  streaming.rs
src/ptp/types/: device.rs  mod.rs  objects.rs  properties.rs  storage.rs
src/transport/: mock.rs  mod.rs  nusb.rs
src/transport/virtual_device/: CLAUDE.md  builders.rs  config.rs  handlers.rs  mod.rs  registry.rs  state.rs  watcher.rs
tests/: integration.rs
