[package]
name = "mtp-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
description = "Pure-Rust MTP (Media Transfer Protocol) library for modern Android devices"
repository = "https://github.com/vdavid/mtp-rs"
keywords = ["mtp", "android", "usb", "media", "transfer"]
categories = ["hardware-support", "filesystem"]
readme = "README.md"
documentation = "https://docs.rs/mtp-rs"
exclude = [
    ".github/",
    "AGENTS.md",
    "docs/",
    "justfile",
    "deny.toml",
    "clippy.toml",
    "rustfmt.toml",
    "proptest-regressions/",
]

[package.metadata.docs.rs]
all-features = true

[dependencies]
# USB transport (Phase 3+)
nusb = "0.1"

# Async runtime agnostic
futures = "0.3"
async-trait = "0.1"

# Byte handling
bytes = "1.5"

# For thiserror derive
thiserror = "1.0"

# Enum conversion derives
num_enum = "0.7"

# Async timeout utilities
futures-timer = "3.0.3"

# macOS: IOKit for USB location_id
# Versions match nusb's dependencies to ensure deduplication (no extra compile cost)
[target.'cfg(target_os = "macos")'.dependencies]
io-kit-sys = "0.4"
core-foundation = "0.9"

[dev-dependencies]
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "time", "fs", "io-util"] }
proptest = "=1.5.0"  # Pinned for MSRV 1.75 compatibility
serial_test = "3.1"
parking_lot = "0.12"  # Used by MockTransport

[features]
default = []
